RESOLVED FIXED19976
[REGRESSION] Correct build error introduced in @34765
https://bugs.webkit.org/show_bug.cgi?id=19976
Summary [REGRESSION] Correct build error introduced in @34765
Brent Fulgham
Reported 2008-07-10 13:37:48 PDT
A small change in FontCairo.cpp causes the Windows (Cairo) build to fail as the shadowBlur member variable might not be initialized. Since these warnings are treated as errors in the Windows build, we get a build failure.
Attachments
Correct build regression. (1.19 KB, patch)
2008-07-10 14:09 PDT, Brent Fulgham
darin: review+
Brent Fulgham
Comment 1 2008-07-10 14:09:01 PDT
Created attachment 22204 [details] Correct build regression.
Matt Lilek
Comment 2 2008-07-10 16:03:05 PDT
Committed revision 35106.
Note You need to log in before you can comment on or make changes to this bug.