2008-07-10  Brent Fulgham  <bfulgham@gmail.com>

Correct a build regression due to an uninitialized variable.

        <https://bugs.webkit.org/show_bug.cgi?id=19976>

        Reviewed by Darin.

        * platform/graphics/cairo/FontCairo.cpp:
        (WebCore::Font::drawGlyphs):



Canonical link: https://commits.webkit.org/27544@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35106 268f45cc-cd09-0410-ab3c-d52691b4dbfc